# ffs

./: Cargo.toml  PROTOCOL.md  README.md
src/: file_generator.rs  main.rs  network.rs  protocol.rs  tui.rs
src/network/: client.rs  server.rs
