[package]
name = "ffs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = "0.6.3"
clap = { version = "4.5.15", features = ["derive"] }
eyre = "0.6.12"
hostname = "0.4.0"
sha2 = "0.10.8"
socket2 = "0.5.7"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "net", "time", "macros", "sync", "fs", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
